[package]
name = "gluesql"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
default-run = "gluesql"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["sql-database", "sql", "websql", "webassembly"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
gluesql-core.workspace = true
cli = { workspace = true, optional = true }
test-suite = { workspace = true, optional = true }
gluesql_memory_storage = { workspace = true, optional = true }
gluesql-shared-memory-storage = { workspace = true, optional = true }
gluesql_sled_storage = { workspace = true, optional = true }
gluesql-json-storage = { workspace = true, optional = true }
gluesql-csv-storage = { workspace = true, optional = true }
gluesql-composite-storage = { workspace = true, optional = true }
gluesql-web-storage = { workspace = true, optional = true }
gluesql-idb-storage = { workspace = true, optional = true }
gluesql-mongo-storage = { workspace = true, optional = true }
gluesql-redis-storage = { workspace = true, optional = true }
gluesql-parquet-storage = { workspace = true, optional = true }
gluesql-file-storage = { workspace = true, optional = true }
gluesql-git-storage = { workspace = true, optional = true }

[dev-dependencies]
futures = "0.3"
anyhow = "1.0"
uuid = { version = "1", features = ["v7"] }

[features]
# DB User
default = [
  "cli",
  "test-suite",
  "gluesql_memory_storage",
  "gluesql-shared-memory-storage",
  "gluesql_sled_storage",
  "gluesql-json-storage",
  "gluesql-parquet-storage",
  "gluesql-csv-storage",
  "gluesql-composite-storage",
  "gluesql-mongo-storage",
  "gluesql-redis-storage",
  "gluesql-file-storage",
  "gluesql-git-storage",
]
