[package]
name = "gluesql-composite-storage"
version = "0.13.0"
edition = "2021"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.0" }
gluesql_memory_storage = { path = "../memory-storage", version = "0.13.0", default-features = false }
gluesql_sled_storage = { path = "../sled-storage", version = "0.13.0" }
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["alter-table", "index", "transaction"]

alter-table = ["gluesql-core/alter-table", "test-suite/alter-table", "gluesql_memory_storage/alter-table"]
index = ["gluesql-core/index", "test-suite/index", "gluesql_memory_storage/index"]
transaction = ["gluesql-core/transaction", "test-suite/transaction", "gluesql_memory_storage/transaction"]
