[package]
name = "gluesql-csv-storage"
version = "0.12.0"
edition = "2021"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[dependencies]
gluesql-core = { path = "../../core", version = "0.12.0", features = [
	"alter-table",
	"index",
	"transaction",
] }
async-trait = "0.1"
csv = "1.1"
thiserror = "1"

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.12.0", features = [
	"alter-table",
	"index",
	"transaction",
] }
tokio = { version = "1", features = ["rt", "macros"] }
