[package]
name = "gluesql-csv-storage"
authors = [
  "Taehoon Moon <taehoon.moon@outlook.com>",
]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
csv = "1.2.2"

[dev-dependencies]
test-suite.workspace = true

rust_decimal = "1"
rust_decimal_macros = "1"

[lints]
workspace = true
