[package]
name = "gluesql-etcd-storage"
authors = ["OpenAI" ]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
etcd-client = "0.15"
uuid = { version = "1", features = ["v7"] }
gluesql-core.workspace = true

[dev-dependencies]
test-suite.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }

[features]
test-etcd = []
