[package]
name = "gluesql-file-storage"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
toml = { version = "0.8.19", features = ["preserve_order"] }
uuid = { version = "1.10.0", features = ["v7"] }
hex = "0.4.3"
ron = { version = "0.8.1", features = ["integer128"] }

[dev-dependencies]
test-suite.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
