[package]
name = "gluesql-file-storage"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v7"] }
hex = "0.4.3"
ron = { version = "0.8.1", features = ["integer128"] }

[dev-dependencies]
test-suite.workspace = true

[lints]
workspace = true
