[package]
name = "gluesql-git-storage"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
gluesql-file-storage.workspace = true
async-trait = "0.1"
git2 = "0.19.0"

[dev-dependencies]
test-suite.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
