[package]
name = "gluesql-idb-storage"
version = "0.13.0"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
idb = "0.4.0"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console"] }
serde_json = "1.0.91"
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.0" }
wasm-bindgen-test = "0.3.33"

[features]
default = [
	"alter-table",
	"index",
	"transaction",
]

alter-table = ["gluesql-core/alter-table"]
index = ["gluesql-core/index"]
transaction = ["gluesql-core/transaction"]
