[package]
name = "gluesql-idb-storage"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
idb = "0.6.1"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["console"] }
serde_json = "1.0.111"
gloo-utils = { version = "0.2.0", features = ["serde"] }
futures = "0.3"
send_wrapper = "0.6"

[dev-dependencies]
test-suite.workspace = true
wasm-bindgen-test = "0.3.40"

[lib]
crate-type = ["cdylib", "rlib"]
