[package]
name = "gluesql_indexeddb_storage"
version = "0.13.0"
edition = "2021"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.0", features = [
    "alter-table",
    "index",
    "transaction",
] }
async-trait = "0.1"
idb = "0.2.0"
wasm-bindgen = "0.2"
thiserror = "1"
serde-wasm-bindgen = "0.4"
serde = { version = "1" }

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.0", default-features = false }
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
