[package]
name = "gluesql-json-storage"
version = "0.13.0"
authors = [
  "Hyoungkwan Cho <devgony@gmail.com>",
  "Taehoon Moon <taehoon.moon@outlook.com>",
]
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
utils = { package = "gluesql-utils", path = "../../utils", version = "0.13.0" }
hex = "0.4"
thiserror = "1.0"
iter-enum = "1"
async-io = "1"

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.0" }
uuid = "1"
