[package]
name = "gluesql-json-storage"
authors = [
  "Hyoungkwan Cho <devgony@gmail.com>",
  "Taehoon Moon <taehoon.moon@outlook.com>",
]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
utils.workspace = true

serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1.0"
iter-enum = "1"

[dev-dependencies]
test-suite.workspace = true
uuid = "1"

[lints]
workspace = true
