[package]
name = "gluesql_jsonl_storage"
version = "0.13.0"
edition = "2021"
authors = [
	"Hyoungkwan Cho <devgony@gmail.com>",
	"Taehoon Moon <taehoon.moon@outlook.com>"
]
description = "GlueSQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/gluesql/gluesql"
documentation = "https://docs.rs/gluesql/"

[dependencies]
gluesql-core = { path = "../../core", version = "0.13.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
utils = { package = "gluesql-utils", path = "../../utils", version = "0.13.0" }

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", path = "../../test-suite", version = "0.13.0" }

[features]
default = [
	"alter-table",
	"index",
	"transaction",
]

alter-table = ["gluesql-core/alter-table"]
index = ["gluesql-core/index"]
transaction = ["gluesql-core/transaction"]
